--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 
 
     <!-- change this to your project name -->
-    <title>eframe template</title>
+    <title>wordle</title>
 
     <!-- config for our rust wasm binary. go to https://trunkrs.dev/assets/#rust for more customization -->
-    <script type="module">import init from '/wordle-rust-preview/index-1bff05320829927e.js';init('/wordle-rust-preview/index-1bff05320829927e_bg.wasm');</script>
+    <script type="module">import init from '/wordle-rust-preview/index-4ceb7889aa5311d8.js';init('/wordle-rust-preview/index-4ceb7889aa5311d8_bg.wasm');</script>
     <!-- this is the base url relative to which other urls will be constructed. trunk will insert this from the public-url option -->
     <base href="/wordle-rust-preview/">
 
-    <link rel="icon" href="/wordle-rust-preview/favicon-f402c8741ce815ec.ico">
+    <link rel="icon" href="/wordle-rust-preview/favicon-8e3de5be879e9ce3.ico">
 
 
     
@@ -115,8 +115,8 @@
 
     </style>
 
-<link rel="preload" href="/wordle-rust-preview/index-1bff05320829927e_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
-<link rel="modulepreload" href="/wordle-rust-preview/index-1bff05320829927e.js"></head>
+<link rel="preload" href="/wordle-rust-preview/index-4ceb7889aa5311d8_bg.wasm" as="fetch" type="application/wasm" crossorigin="">
+<link rel="modulepreload" href="/wordle-rust-preview/index-4ceb7889aa5311d8.js"></head>
 
 <body>
     <!-- The WASM code will resize the canvas dynamically -->
